@@ -6,3 +6,14 @@ $_lang['console_tab'] = 'PHP Codeeditor';
 $_lang['console_exec'] = 'Execute';
 $_lang['console_formated_result'] = 'Formated result';
 $_lang['console_source_result'] = 'Source result';
+$_lang['console_save'] = 'Save';
+$_lang['console_load'] = 'Load';
+$_lang['console_select_file'] = 'Select a file';
+$_lang['console_file_name'] = 'File name';
+$_lang['console_close'] = 'Close';
+$_lang['console_load'] = 'Load';
+
+$_lang['console_err_path_nf'] = 'The path is not found!';
+$_lang['console_err_file_nf'] = 'The file does not exist!';
+$_lang['console_err_files_nf'] = 'Did not find any files!';
+$_lang['console_err_file_ns'] = 'File is not specified!';
