@@ -6,3 +6,14 @@ $_lang['console_tab'] = 'Редактор php-кода';
 $_lang['console_exec'] = 'Выполнить';
 $_lang['console_formated_result'] = 'Результат';
 $_lang['console_source_result'] = 'Исходный код';
+$_lang['console_save'] = 'Сохранить';
+$_lang['console_load'] = 'Загрузить';
+$_lang['console_select_file'] = 'Выберите файл';
+$_lang['console_file_name'] = 'Имя файла';
+$_lang['console_close'] = 'Закрыть';
+$_lang['console_load'] = 'Загрузить';
+
+$_lang['console_err_path_nf'] = 'Путь ней найден!';
+$_lang['console_err_file_nf'] = 'Файл ней найден!';
+$_lang['console_err_files_nf'] = 'Файлы ней найдены!';
+$_lang['console_err_file_ns'] = 'Файл не выбран!';
